--- a/src/widgets/footer/footer.scss
+++ b/src/widgets/footer/footer.scss
@@ -1,105 +1,55 @@
 .footer {
-    background: #105B60;
+    background-color: #333333;
     color: #fff;
-    padding: 99px 60px 50px 60px;
-margin-top: 100px;
-    &_top {
-        display: flex;
-        align-items: start;
-        justify-content: space-between;
-
-        &_logo {
-            a {
-                text-decoration: none;
-                color: #fff;
-            }
-
-            &_social {
-                display: flex;
-                margin: 23px 0;
-                gap: 14px;
-
-&_bloc{
-    width: 30px;
-    height: 30px;
+    margin-top: 5%;
+    padding: 40px 60px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #fff;
-    border-radius: 50%;
-}
-                .FaInstagram{
-                    background-color: #fff;
-                    width: 30px;
-                }
-                .CiFacebook{
-                    background-color: #fff;
-                }
-                .FaYoutube{
-                    background-color: #fff;
-                }
-                .FaGoogle{
-                    background-color: #fff;
-                }
-            }
-        }
 
-        &>div {
+    &-block {
+        display: flex;
+        justify-content: space-between;
+        gap: 12%;
+
+        &-Links {
             display: flex;
             flex-direction: column;
 
-            h3 {
-                font-family: Kino;
-                font-weight: 400;
-                font-size: 22.5px;
-                margin-bottom: 15px;
-            }
-
             .link {
-                margin: 8px 0;
-                font-family: SF Pro Display;
-                font-weight: 400;
-                font-size: 18px;
-                text-decoration: none;
-                color: #fff;
+                width: 130px;
+                margin-top: 5%;
             }
         }
-    }
 
-    &_bottom {
-        border-top: 2px solid #fff;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 22px 0;
-        display: flex;
+        &-text {
+            margin-left: 27%;
 
-        a {
-            border: none;
-            color: #fff;
-        }
-
-        .footer_views {
-            position: relative;
-            border: 1px solid #fff;
-            width: 110px;
-            display: flex;
-
-            .footer_views_akar {
-                position: absolute;
-                top: 30%;
-                left: 5%;
+            &-button {
+                position: relative;
+                padding: 10px 20px;
+                color: #219653;
+                background: linear-gradient(to bottom, #333333 50%, transparent 50%);
+                background-size: 100% 200%;
+                background-position: top;
+                border: solid 3px #219653;
+                border-radius: 5px;
             }
 
-            .img {
+            &-button:hover {
+                background-position: bottom;
+                background-color: #fff;
+                color: #333333;
+            }
+
+            &-first {
                 display: flex;
-                flex-direction: column;
-                width: 100%;
+                gap: 10px;
+                margin-top: 10%;
+            }
 
-                div {
-                    display: flex;
-                    margin-left: 20px;
-                }
+            &-second {
+                display: flex;
+                gap: 10px;
+                margin-top: 10%;
             }
         }
     }
