--- a/src/widgets/header/header.scss
+++ b/src/widgets/header/header.scss
@@ -14,76 +14,98 @@
         &-text {
             display: flex;
             gap: 30px;
+
             &-first {
                 display: flex;
                 gap: 10px;
                 align-items: center;
 
             }
+
             &-second {
                 display: flex;
                 align-items: center;
                 gap: 10px;
             }
+
             &-button {
                 align-items: center;
+
                 &-text {
-                    padding: 10px 25px;
-                    font-size: clamp(20px, 15px, 10px);
-                    border: solid 2px #219653;
+                    position: relative;
+                    padding: 10px 20px;
+                    color: #219653;
+                    background: linear-gradient(to bottom, #fff 50%, transparent 50%);
+                    background-size: 100% 200%;
+                    background-position: top;
+                    border: solid 3px #219653;
                     border-radius: 5px;
-                    cursor: pointer;
-                    background-color: #fff;
+                }
+                    &-text:hover {
+                        background-position: bottom;
+                        background-color: #333333;
+                    }
                 }
             }
         }
-    }
 
-    &-block {
-        margin-top: 2%;
-        height: 3rem;
-        width: 100%;
-        background-color: #333333;
-        color: #219653;
-        display: flex;
-        align-items: center;
-
-        &-links {
-            display: flex;
-            justify-content: space-around;
+        &-block {
+            margin-top: 2%;
+            height: 3rem;
             width: 100%;
-            font-size: 14px;
-        }
-    }
-}
+            background-color: #333333;
+            color: #219653;
+            display: flex;
+            align-items: center;
 
-@media screen and (max-width: 1024px) {
-    .header{
-        &-data{
-            &-logo{
-                width: 70%;
-            }
-            &-text{
-                &-first{
-                    font-size: 12px;
-
-                    &-logo{
-                        width: 12%;
-                    }
-                }
-                &-second{
-                    font-size: 12px;
-
-                    &-logo{
-                        width: 12%;
-                    }
-                }
-                &-button{
-                    &-text{
-                        font-size: 60%;
-                    }
-                }
+            &-links {
+                display: flex;
+                justify-content: space-around;
+                width: 100%;
+                font-size: 14px;
             }
         }
     }
-}
+
+    .headfooter-mainLogo {
+        max-width: 200px;
+        width: 100%;
+    }
+
+    .headfooter-logo {
+        width: 12%;
+    }
+
+    @media screen and (max-width: 1024px) {
+        .header {
+            &-data {
+                &-logo {
+                    width: 70%;
+                }
+
+                &-text {
+                    &-first {
+                        font-size: 12px;
+
+                        &-logo {
+                            width: 12%;
+                        }
+                    }
+
+                    &-second {
+                        font-size: 12px;
+
+                        &-logo {
+                            width: 12%;
+                        }
+                    }
+
+                    &-button {
+                        &-text {
+                            font-size: 60%;
+                        }
+                    }
+                }
+            }
+        }
+    }
